# NuMicro-8051-prog

./: .gitattributes  .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
bootloader/: .gitignore  Makefile
bootloader/inc/: Common.h  Function_define.h  function_define_n76e003.h  n76e003_iar.h  n76e003_keil.h  n76e003_sdcc.h
bootloader/inc/common/: macros.h
bootloader/src/: bootloader.c  isp.h  isp_uart0.h
nuvo51icp/: Makefile  Makefile.rpi  arduino.cpp  delay.h  device_common.c  device_common.h  itest.c  main.c  n51_icp.c  n51_icp.h  n51_pgm.h  n76e003_icp_dev.h  nuvo51icp.ino  print_caps.h  rpi-pigpio.c  rpi.c  stub.c
nuvo51icp/common/: isp_common.h
nuvoicp/: Makefile  Makefile.rpi  arduino.cpp  config.h  delay.h  icp.c  icp.h  itest.c  main.c  n51_icp.c  n51_icp.h  n51_pgm.h  nuvoicp.ino  pgm.h  rpi-pigpio.c  rpi.c  stub.c
nuvoicp/common/: isp_common.h
nuvoispy/: config.json  config.py  libicp.py  libpgm.py  nuvoicpy.py  nuvoispy.py
nuvoispy/icp/: nuvoicp.py
nuvoprogpy/: Flash.py  PartNumID.py  _incomplete_NuMicro.py  config-example.json  config.py  nuvoprog.py
nuvoprogpy/nuvo51icpy/: __init__.py  __main__.py  libicp_iface.py  nuvo51icpy.py
nuvoprogpy/nuvo51icpy/lib/: libnuvo51icp.py
nuvoprogpy/nuvoicpy/: __init__.py  __main__.py  nuvoicpy.py
nuvoprogpy/nuvoicpy/lib/: libnuvoicp.py
nuvoprogpy/nuvoispy/: __init__.py  __main__.py  nuvoispy.py
references/code/: PartNumID.cpp  ReadMe.md
test_serial/: test_serial.ino
tests/: test_compare.py
